<resources>
    <string name="app_name">RabbIT 2016</string>

    <string name="nav_timetable">Prezentacje</string>
    <string name="nav_stands">Firmy</string>
    <string name="nav_special_guest">Gość specjalny</string>
    <string name="nav_about_us">Autorzy</string>

    <string name="navigation_drawer_toggle">Menu</string>
    <string name="website_string">Strona internetowa:</string>
    <string name="room_string">Sala:</string>

    <string name="rate_company_string">Oceń firmę:</string>
    <string name="criterion_1_string">Kryterium 1:</string>
    <string name="criterion_2_string">Kryterium 2:</string>
    <string name="criterion_3_string">Kryterium 3:</string>

    <string name="about_company_string">O firmie:</string>
    <string name="about_guest_string">Kim jest:</string>
    <string name="time_string">Kiedy:</string>
    <string name="place_string">Gdzie:</string>

    <string name="about_us_string">O nas</string>
    <string name="about_us_desc_string">Jesteśmy kołem naukowym działającym na Wydziale Informatyki Zachodniopomorskiego Uniwersetu Technologicznego w Szczecinie.\n\nNaszą pasją jest tworzenie aplikacji mobilnych.</string>
    <string name="want_to_join_string">Chcesz dołączyć?</string>
    <string name="want_to_join_desc_string">Przyjdź na jedno z naszych cotygodniowych spotkań!</string>
    <string name="more_info_string">Więcej informacji znajdziesz na:</string>
    <string name="mad_website_string">Stronie internetowej:</string>
    <string name="mad_website_desc_string">www.mad.wi.zut.edu.pl </string>
    <string name="mad_facebook_string">Facebooku:</string>
    <string name="mad_facebook_website_string">https://www.facebook.com/MADWIZUT </string>
    <string name="authors">Autorzy:</string>
    <string name="authors_desc">Sara Anku \nMichał Bednarski \nDawid Heyman \nBartosz Kozajda \nMarek Macko \nDamian Malarczyk \nWaldemar Sambor</string>
    <string name="ssa_patron">Opiekun koła naukowego:</string>
    <string name="ssa_patron_desc">dr inż. Radosław Maciaszczyk</string>
    <string name="legal_notices">
        <b>Legal notices</b>\n\n
        Application use open source software:\n
        - Retrofit Copyright 2013 Square, Inc.\n
        - ButterKnife Copyright 2013 Jake Wharton\n
        - SwipeBack by sockeqwe\n\n
        License:\n
        Copyright 2016 Mobile Applications Developers WI ZUT\n\n
        Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\n
        Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
    </string>

    <string name="no_internet">Brak połączenia z internetem</string>
    <string name="settings">Ustawienia</string>
    <string name="rate">Oceń</string>
    <string name="send_ratings">Wyślij oceny</string>
    <string name="send_success">Wysłano pomyślnie</string>
    <string name="send_error">Sprawdź połączenie z internetem</string>
    <string name="criterion_error">Musisz ocenić wszystkie kryteria</string>

    <string name="special_guest_name">Prof. Andy Hopper</string>
    <string name="special_guest_topic_title">Wykład pt. :</string>
    <string name="special_guest_topic">Perspektywy dla innowacji</string>
    <string name="special_guest_room">Centrum Nanotechnologii ZUT\nprzy al. Piastów 45</string>
    <string name="special_guest_description">Prof. Andy Hopper – dyrektor Wydziału Informatyki Uniwersytetu w Cambridge (The Computer Laboratory, University of Cambridge).\n\nTen znakomity naukowiec polskiego pochodzenia (urodzony w Warszawie) jest twórcą takich najwyższej światowej klasy wynalazków jak minikomputer Raspberry PI, procesory ARM, obecne w każdym smartfonie, protokół VNC i wiele innych. Prof. Andy Hopper figuruje na liście najbardziej wpływowych współczesnych Brytyjczyków (100 most influential Britons of the modern age) tygodnika Sunday Times.</string>
    <string name="special_guest_time">21 kwietnia 2016 roku\ngodz. 10:00 - 12:00</string>
</resources>
