<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:id="@+id/guest_image_view"
            android:src="@drawable/andy_hopper"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:id="@+id/guest_name_view"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/default_padding"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@+id/guest_image_view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/special_guest_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/special_guest_topic_title"
            android:id="@+id/topic_title"
            android:layout_below="@+id/guest_name_view"
            android:layout_alignLeft="@+id/guest_name_view"
            android:layout_alignStart="@+id/guest_name_view"
            android:layout_marginTop="@dimen/default_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingRight="@dimen/default_padding"
            android:text="@string/special_guest_topic"
            android:id="@+id/topic"
            android:textStyle="bold"
            android:textColor="@color/textDefault"
            android:layout_below="@+id/topic_title"
            android:layout_alignLeft="@+id/text_room"
            android:layout_alignStart="@+id/text_room"
            android:layout_alignRight="@+id/guest_name_view"
            android:layout_alignEnd="@+id/guest_name_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/place_string"
            android:id="@+id/text_room"
            android:layout_below="@+id/topic"
            android:layout_alignLeft="@+id/guest_name_view"
            android:layout_alignStart="@+id/guest_name_view"
            android:layout_marginTop="@dimen/default_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingRight="@dimen/default_padding"
            android:text="@string/special_guest_room"
            android:id="@+id/guest_room_view"
            android:textStyle="bold"
            android:textColor="@color/textDefault"
            android:layout_below="@+id/text_room"
            android:layout_alignLeft="@+id/text_room"
            android:layout_alignStart="@+id/text_room"
            android:layout_alignRight="@+id/guest_name_view"
            android:layout_alignEnd="@+id/guest_name_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/time_string"
            android:id="@+id/textView6"
            android:layout_below="@+id/guest_room_view"
            android:layout_alignLeft="@+id/guest_room_view"
            android:layout_alignStart="@+id/guest_room_view"
            android:layout_marginTop="@dimen/default_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/guest_time_view"
            android:textColor="@color/textDefault"
            android:layout_below="@+id/textView6"
            android:textStyle="bold"
            android:paddingRight="@dimen/default_padding"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:layout_alignRight="@+id/guest_room_view"
            android:layout_alignEnd="@+id/guest_room_view"
            android:text="@string/special_guest_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/about_guest_string"
            android:id="@+id/text_desc"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_below="@+id/guest_time_view"
            android:layout_alignLeft="@+id/guest_time_view"
            android:layout_alignStart="@+id/guest_time_view" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:paddingRight="@dimen/default_padding"
            android:text="@string/special_guest_description"
            android:id="@+id/guest_desc_view"
            android:layout_below="@+id/text_desc"
            android:textColor="@color/textDefault"
            android:layout_alignLeft="@+id/text_desc"
            android:layout_alignStart="@+id/text_desc"
            android:layout_alignRight="@+id/guest_time_view"
            android:layout_alignEnd="@+id/guest_time_view"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    </RelativeLayout>

</ScrollView>