<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/about_us_string"
            android:fontFamily="sans-serif-regular"
            android:textColor="@color/textDefault"
            android:id="@+id/textView"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@+id/frameLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/about_us_font_size"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/textDefault"
            android:paddingRight="@dimen/default_padding_right"
            android:layout_marginTop="5dp"
            android:text="@string/about_us_desc_string"
            android:gravity=""
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/textDefault"
            android:id="@+id/frameLayout">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/mad_logo_view"
                android:layout_gravity="center"
                android:src="@drawable/mad_logo" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/want_to_join_string"
            android:fontFamily="sans-serif-regular"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/textView3"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/about_us_font_size"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/textDefault"
            android:paddingRight="@dimen/default_padding_right"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/want_to_join_desc_string"
            android:gravity=""
            android:id="@+id/textView4"
            android:layout_below="@+id/textView3"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/more_info_string"
            android:fontFamily="sans-serif-regular"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/textView5"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_below="@+id/textView4"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/about_us_font_size"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/textDefault"
            android:paddingRight="@dimen/default_padding_right"
            android:textStyle="bold"
            android:text="@string/mad_website_string"
            android:layout_marginTop="@dimen/default_margin"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView5"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/about_us_font_size"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/textDefault"
            android:paddingRight="@dimen/default_padding_right"
            android:text="@string/mad_website_desc_string"
            android:textStyle="italic"
            android:id="@+id/textView8"
            android:layout_below="@+id/textView7"
            android:layout_alignLeft="@+id/textView9"
            android:layout_alignStart="@+id/textView9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/about_us_font_size"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:textColor="@color/textDefault"
            android:paddingRight="@dimen/default_padding_right"
            android:text="@string/mad_facebook_string"
            android:id="@+id/textView9"
            android:layout_below="@+id/textView8"
            android:layout_alignLeft="@+id/textView7"
            android:layout_alignStart="@+id/textView7"
            android:layout_marginTop="@dimen/default_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/about_us_font_size"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/textDefault"
            android:textStyle="italic"
            android:paddingRight="@dimen/default_padding_right"
            android:text="@string/mad_facebook_website_string"
            android:gravity=""
            android:id="@+id/textView10"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_below="@+id/textView9"
            android:layout_alignLeft="@+id/textView9"
            android:layout_alignStart="@+id/textView9" />

    </RelativeLayout>
</ScrollView>